crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__splash__tests__splash_default.snap
---
source: crates/zeph-tui/src/widgets/splash.rs
expression: output
---
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│              ███████╗███████╗██████╗ ██╗  ██╗            │
│              ╚══███╔╝██╔════╝██╔══██╗██║  ██║            │
│                ███╔╝ █████╗  ██████╔╝███████║            │
│               ███╔╝  ██╔══╝  ██╔═══╝ ██╔══██║            │
│              ███████╗███████╗██║     ██║  ██║            │
│              ╚══════╝╚══════╝╚═╝     ╚═╝  ╚═╝            │
│                                                          │
│                          v0.21.2                         │
│                                                          │
│                  Type a message to start.                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
