crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__splash__tests__splash_minimal_single_line.snap
---
source: crates/zeph-tui/src/widgets/splash.rs
expression: output
---
                           ≈ zeph
