crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__splash__tests__splash_short_terminal_compact_layout.snap
---
source: crates/zeph-tui/src/widgets/splash.rs
expression: output
---
                   ≈ zeph  think further.                   
           / commands  @ files  ? keys  Tab panels
