crates/zeph-tui/src/widgets/snapshots/zeph_tui__widgets__splash__tests__splash_truecolor_full_layout.snap
---
source: crates/zeph-tui/src/widgets/splash.rs
expression: output
---
                                                            
                           ≈ zeph                           
                       think further.                       
                           v0.22.5                          
                                                            
           / commands  @ files  ? keys  Tab panels
